<resources>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="reload">重试</string>
    <string name="request_acer_error">未登录，或者用户信息异常</string>
    <string name="quote_acer_delete">用户不存在或已删除</string>
    <string name="quote_comment_delete">该评论已被删除</string>
    <string name="quote_title_delete">未知领域</string>
    <string name="articlelist_comment">查看评论</string>
    <string name="articlelist_like">收藏</string>
    <string name="articlelist_banana">食我大蕉</string>
    <string name="string_comment">评论</string>
    <string name="navigation_star">收藏</string>
    <string name="navigation_quote">召唤</string>
    <string name="navigation_message">私信</string>
    <string name="articlelist_lookcount">围观</string>
    <string name="article_send_comment_hint">发评论...</string>
    <string name="article_send_quote_cancel">( ´_ゝ`) 已取消引用</string>
    <string name="article_send_quote">引用%1$s的评论...</string>
    <string name="comment_content_illegal">评论不能少于5个字还不能纯表情 (｀･ω･)</string>
    <string name="profile_uid">uid</string>
    <string name="profile_registration_time">注册时间</string>
    <string name="profile_posts">用户发布成功的投稿总和。</string>
    <string name="profile_posts_info">我的投稿总数 %1$d Posts。</string>
    <string name="profile_views">当前所有有效投稿的浏览数总和。</string>
    <string name="profile_views_info">投稿总浏览数 %1$d Views。</string>
    <string name="profile_stars">当前所有有效投稿的收藏数总和。</string>
    <string name="profile_stars_info">投稿总收藏数 %1$d Favors。</string>
    <string name="profile_comments">当前所有有效投稿的评论数总和。</string>
    <string name="profile_comments_info">投稿总评论数 %1$d Comms。</string>
    <string name="minute_ago">分钟前</string>
    <string name="hour_ago">小时前</string>
    <string name="day_ago">天前</string>
    <string name="seconds_ago">秒前</string>
    <string name="article_views">围观</string>
    <string name="nothing">这里空无一物</string>
    <string name="navigation_head_getbananafailed">香蕉都被猴子吃了</string>
    <string name="navigation_head_reLogin">出了点意外，重新登陆试试看吧</string>
    <string name="navigation_head_has_signin">已签到</string>
    <string name="navigation_head_do_signin">签到中...</string>
    <string name="navigation_head_signin">签到</string>
    <string name="navigation_head_unLogin">未登录</string>
    <string name="navigation_head_banana">个香蕉，</string>
    <string name="navigation_head_goldbanana">个金香蕉</string>
    <string name="login_error_timeout">( ´_ゝ`)服务器抽风，再来一次吧</string>
    <string name="login_error_password">密纹都写错</string>
    <string name="load_more_no_more">没有了 ╮(╯▽╰)╭ </string>
    <string name="load_more_no_comment">沙发可能还在 (　^ω^)</string>
    <string name="load_more_nothing">不毛之地，连根毛都没有</string>
    <string name="load_more_failed">加载失败，再次滑动重试~w</string>
    <string name="post_comment_success">评论成功! (＾o＾)ﾉ</string>
    <string name="post_comment_may_failed">(|||ﾟдﾟ)刷新看看吧</string>
    <string name="post_comment_failed">评论失败，重新试试吧</string>
    <string-array name="emoticon_tab_types">
        <item>AC娘</item>
        <item>匿名版</item>
        <item>新娘</item>
        <item>彩娘</item>
        <item>TD猫</item>
        <item>皮尔德</item>
    </string-array>
    <string name="acer_info">acer_info</string>
    <string name="empty"></string>
    <string name="article_list_go_top">返回顶部</string>
    <string name="article_go_comment">查看评论</string>
    <string name="article_star">收藏</string>
    <string name="article_subtitle_refresh">刷新评论</string>
    <string name="article_comment_unquote">取消引用</string>
    <string name="profile_content_exp">Exp:%1$d/%2$d - Per:%3$d</string>
    <string name="profile_head_count">共有%1$d次召唤、%2$d条私信、%3$d个新听众、%4$d条推送</string>
    <string name="normal_request_error">大概是服务器爆炸？或者重新登陆试试</string>
    <string name="activity_not_found">未找到可处理此操作的应用</string>
    <string name="copied_to_clipboard_format">已复制到剪贴板：\n%1$s</string>
    <string name="load_error">加载失败</string>
    <string name="not_yet_implemented">嘿嘿嘿</string>
    <string name="report_abuse">举报不良信息</string>
    <string name="view_more">查看更多</string>
    <string name="view_more_with_count_format">查看更多（%1$d）</string>
    <string name="just_now">刚刚</string>
    <string name="minute_format">%1$d分钟前</string>
    <string name="hour_format">%1$d小时前</string>
    <string name="today_hour_minute_pattern">今天 HH:mm</string>
    <string name="yesterday_hour_minute_pattern">昨天 HH:mm</string>
    <string name="month_day_hour_minute_pattern">M月d日 HH:mm</string>
    <string name="date_hour_minute_pattern">Y年M月d日 HH:mm</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="month_day_pattern">M月d日</string>
    <string name="date_pattern">Y年M月d日</string>
    <string name="notices_title">@string/settings_open_source_licenses_title</string>
    <string name="notices_close">@string/close</string>
    <string name="app_name">脏</string>
    <string name="api_error_parse">解析错误</string>
    <string name="api_error_timeout">请求超时</string>
    <string name="api_error_no_connection">无网络连接</string>
    <string name="api_error_auth_failure">认证失败</string>
    <string name="api_error_redirect">重定向错误</string>
    <string name="api_error_server">服务器错误</string>
    <string name="api_error_network">网络错误</string>
    <string name="api_error_invalid_error_response">@string/api_error_server</string>
    <string name="api_error_unknown_v2_error">未知 V2 错误</string>
    <string name="api_error_need_permission">需要权限</string>
    <string name="api_error_uri_not_found">资源不存在</string>
    <string name="api_error_missing_args">参数不足</string>
    <string name="api_error_image_too_large">图片过大</string>
    <string name="api_error_has_ban_word">包含违禁词语</string>
    <string name="api_error_input_too_short">输入过短</string>
    <string name="api_error_target_not_found">对象不存在</string>
    <string name="api_error_need_captcha">需要验证码</string>
    <string name="api_error_image_unknown">未知图片格式</string>
    <string name="api_error_image_wrong_format">图片格式错误</string>
    <string name="api_error_image_wrong_ck">私有图片访问验证错误</string>
    <string name="api_error_image_ck_expired">私有图片验证过期</string>
    <string name="api_error_title_missing">缺少标题</string>
    <string name="api_error_desc_missing">缺少描述</string>
    <string name="api_error_unknown">未知错误</string>
    <string name="api_error_token_invalid_request_scheme">请求协议无效</string>
    <string name="api_error_token_invalid_request_method">请求方法无效</string>
    <string name="api_error_token_access_token_is_missing">缺少 access_token</string>
    <string name="api_error_token_invalid_access_token">access_token 无效</string>
    <string name="api_error_token_invalid_apikey">API Key 无效</string>
    <string name="api_error_token_apikey_is_blocked">API Key 已被屏蔽</string>
    <string name="api_error_token_access_token_has_expired">access_token 已过期</string>
    <string name="api_error_token_invalid_request_uri">请求地址无效</string>
    <string name="api_error_token_invalid_credencial1">用户未授权此访问</string>
    <string name="api_error_token_invalid_credencial2">API Key 未申请此权限</string>
    <string name="api_error_token_not_trial_user">不是测试用户</string>
    <string name="api_error_token_rate_limit_exceeded1">用户访问速度限制</string>
    <string name="api_error_token_rate_limit_exceeded2">IP 访问速度限制</string>
    <string name="api_error_token_required_parameter_is_missing">缺少参数</string>
    <string name="api_error_token_unsupported_grant_type">不支持的 grant_type</string>
    <string name="api_error_token_unsupported_response_type">不支持的 response_type</string>
    <string name="api_error_token_client_secret_mismatch">client_secret 不匹配</string>
    <string name="api_error_token_redirect_uri_mismatch">redirect_uri 不匹配</string>
    <string name="api_error_token_invalid_authorization_code">authorization_code 无效</string>
    <string name="api_error_token_invalid_refresh_token">refresh_token 无效</string>
    <string name="api_error_token_username_password_mismatch">用户名与密码不匹配</string>
    <string name="api_error_token_invalid_user">用户不存在或已删除</string>
    <string name="api_error_token_user_has_blocked">用户已被屏蔽</string>
    <string name="api_error_token_access_token_has_expired_since_password_changed">access_token 因用户修改密码过期</string>
    <string name="api_error_token_access_token_has_not_expired">access_token 尚未过期</string>
    <string name="api_error_token_invalid_request_scope">访问 scope 无效</string>
    <string name="api_error_token_invalid_request_source">访问来源无效</string>
    <string name="api_error_token_thirdparty_login_auth_failed">第三方授权错误</string>
    <string name="api_error_token_user_locked">用户已被锁定</string>
    <string name="api_error_followship_already_followed">你已经关注过这个用户了</string>
    <string name="api_error_followship_not_followed_yet">你还没有关注过这个用户</string>
    <string name="api_error_broadcast_not_found">广播不存在</string>
    <string name="api_error_broadcast_author_banned">广播作者已被封禁</string>
    <string name="api_error_like_broadcast_already_liked">你已经赞过这条广播了</string>
    <string name="api_error_like_broadcast_not_liked_yet">你还没有赞过这条广播</string>
    <string name="api_error_rebroadcast_broadcast_already_rebroadcasted">你已经转播过这条广播了</string>
    <string name="api_error_rebroadcast_broadcast_not_rebroadcasted_yet">你还没有转播过这条广播</string>
    <string name="auth_title_new">登录</string>
    <string name="auth_title_add">添加账户</string>
    <string name="auth_title_update">更新密码</string>
    <string name="auth_title_confirm">确认密码</string>
    <string name="auth_username">ID</string>
    <string name="auth_password">密纹</string>
    <string name="auth_log_in">登录</string>
    <string name="auth_register">没有账户？现在注册</string>
    <string name="auth_error_empty_username">请输入ID，靴靴！</string>
    <string name="auth_error_empty_password">请输入密纹，靴靴！</string>
    <string name="auth_error_invalid_response">服务器应答无效</string>
    <string name="auth_error_unknown">未知错误</string>
    <string name="auth_select_account">选择账户</string>
    <string name="gallery_title">查看照片</string>
    <string name="gallery_load_timeout">加载超时</string>
    <string name="gallery_load_error">加载错误</string>
    <string name="webview_title">查看网页</string>
    <string name="webview_copy_url">复制链接</string>
    <string name="webview_copy_url_empty">链接为空</string>
    <string name="webview_open_in_browser">在浏览器中打开</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_book">读书</string>
    <string name="navigation_movie">电影</string>
    <string name="navigation_music">音乐</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_feedback">反馈</string>
    <string name="navigation_add_account">添加账户</string>
    <string name="navigation_manage_accounts">管理账户</string>
    <string name="main_notification">提醒</string>
    <string name="main_pop">人气最旺</string>
    <string name="main_news">最近发布</string>
    <string name="main_new_reply">最新回复</string>
    <string name="home_broadcast">友邻广播</string>
    <string name="home_mixmain">综合</string>
    <string name="home_bicanlvhua">工作·感情</string>
    <string name="settings_misc_title">其他</string>
    <string name="settings_auto_refresh_home_title">打开时自动刷新主页</string>
    <string name="settings_open_url_with_title">打开链接的方式</string>
    <string name="settings_open_url_with_summary">%1$s</string>
    <string name="settings_about_title">关于</string>
    <string name="settings_open_source_licenses_title">开放源代码许可</string>
    <string name="settings_about_douya_title">关于文脏</string>
    <string name="pref_key_auto_refresh_home">key_auto_refresh_home</string>
    <string name="pref_key_open_url_with">key_open_url_with</string>
    <string name="pref_default_value_open_url_with">0</string>
    <string name="logout_title">注销</string>
    <string name="logout_logout">退出登录</string>
    <string name="pref_key_logout">key_logout</string>
    <string name="pref_key_logout_logout">key_logout_logout</string>
</resources>