<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by mika <sun00743@gmail.com>  on 16-11-14 下午3:39
  ~ Copyright (c) 2016. All rights reserved
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:title="@string/main_notification"
        app:actionLayout="@layout/action_item_badge"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_top"
        android:icon="@drawable/ic_gotop_24dp"
        android:orderInCategory="100"
        android:title="@string/articlelist_gotop"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_pop"
        android:title="@string/main_pop"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_comment"
        android:title="@string/main_new_reply"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_news"
        android:title="@string/main_news"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
